--- a/source/css/color/green.css
+++ b/source/css/color/green.css
@@ -7,8 +7,8 @@
 @import '../variables.css';
 
 :root {
-  --accent: #78E2A0;
-  --background: color-mod(var(--accent) blend(#1D1E28 98%));
-  --color: white;
+  --accent: #99cc99;
+  --background: color-mod(var(--accent) blend(#2d2d2d 98%));
+  --color: #cccccc;
   --border-color: rgba(255, 255, 255, .1);
 }
