--- a/source/css/main.css
+++ b/source/css/main.css
@@ -11,7 +11,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace;
+  font-family: 'Inconsolata', monospace;
   font-size: 1rem;
   line-height: 1.54;
   letter-spacing: -0.02em;
