--- a/source/css/color/blue.css
+++ b/source/css/color/blue.css
@@ -7,8 +7,8 @@
 @import '../variables.css';
 
 :root {
-  --accent: #6699cc
-  --background: color-mod(var(--accent) blend(#2d2d2d 98%));
-  --color: #cccccc;
-  --border-color: rgba(255, 255, 255, .1);
+    --accent: #6699cc;
+    --background: color-mod(var(--accent) blend(#2d2d2d 98%));
+    --color: #cccccc;
+    --border-color: rgba(255, 255, 255, .1);
 }
