--- a/layouts/partials/adsense.html
+++ b/layouts/partials/adsense.html
@@ -4,7 +4,7 @@
      style="display:block; text-align:center;"
      data-ad-format="fluid"
      data-ad-layout="in-article"
-     data-ad-client="ca-pub-{{.Site.Params.Info.adsense}}"
+     data-ad-client="ca-pub-{{.Site.googleAdsense}}"
      data-ad-slot="6857547199"></ins>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
