--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -66,7 +66,7 @@
   </div>
 </div>
 {{ end }}
-{{ if and (.Site.googleAdsense)  (.Params.adsenseBottom) }}
+{{ if and (.Params.googleAdsense)  (.Params.adsenseBottom) }}
 {{ partial "adsense" . }}
 {{ end}}
 
