--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,7 +9,7 @@
   {{ end }}
   {{ $paginator := .Paginate (where $PageContext.RegularPages "Type" $contentTypeName) }}
 
-  {{ if and (.Params.googleAdsense) (.Params.adsenseTop) }}
+  {{ if and (.Site.Params.googleAdsense) (.Site.Params.adsenseTop) }}
   {{ partial "adsense" . }}
   {{ end }}
 
@@ -59,7 +59,7 @@
     {{ end }}
   </div>
   {{ end }}
-  {{ if and (.Params.googleAdsense)  (.Params.adsenseBottom) }}
+  {{ if and (.Site.Params.googleAdsense)  (.Site.Params.adsenseBottom) }}
   {{ partial "adsense" . }}
   {{ end}}
 
