--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,12 +2,18 @@
   <div class="footer__inner">
     {{ if $.Site.Copyright }}
       <div class="copyright copyright--user">
-        <span>{{ $.Site.Copyright | safeHTML }}</span>
+        <span>
+          {{ $.Site.Copyright | safeHTML }}
+        </span>
     {{else}}
       <div class="copyright">
-        <span>© {{ now.Year }} Powered by <a href="http://gohugo.io">Hugo</a></span>
+        <span>
+          © {{ now.Year }} Powered by <a href="http://gohugo.io">Hugo</a>
+        </span>
     {{end}}
-        <span>:: Theme made by <a href="https://twitter.com/panr">panr</a></span>
+        <span>
+          :: Theme inspired by <a href="https://themes.gohugo.io/hugo-theme-terminal/">Terminal</a> from <a href="https://twitter.com/panr">panr</a>
+        </span>
       </div>
   </div>
 </footer>
